--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 	
 	<button id="getNewDeck">Get Deck</button>
 	<button id = "dealCards">Deal Cards</button>
+	<button id = "playTurn">Play Turn</button>
 
 
 
 <!-- 	<h3 id="nflArrests">Nfl Arrests</h3>
 	<div id="nflArrestsData"></div> -->
 	
-
-
 	<!-- mustache templates(script tags make them invisible) -->
 	<!-- `type` is specified for this script because it is not js -->
 <!-- 	<script id="cards-deck-template" type="x-tmpl-mustache">
